--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 layout: default
 ---
 
-{% for post in site.posts %}
-{{ post.title }}
-{{ post.description }}
-{% endfor %}
 
+## Blog
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      {{ post.excerpt }}
+    </li>
+  {% endfor %}
+</ul>
