--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@ layout: default
 ---
 
 
-## Blog
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
+      <a href="{{ post.url }}">{{ post.title }} {{ post.date }}</a>
     </li>
   {% endfor %}
 </ul>
