--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }} {{ post.date }}</a>
+      {{ page.date | date: "%%Y-%M-%d" }}
     </li>
   {% endfor %}
 </ul>
