--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ layout: default
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }} {{ post.date }}</a>
-      {{ page.date | date: "%%Y-%M-%d" }}
+      <a href="{{ post.url }}">{{ page.date | date: "%%Y-%M-%d: " }} {{ post.title }}</a>
     </li>
   {% endfor %}
 </ul>
