--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
----
-layout: default
----
 
+<h2>Patents and Publications</h2>
 
+For a list of my patents, publications, and reports, see:
+[Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate)
+
+<h2>Blog posts</h2>
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.date | date: "%Y-%M-%d: " }} {{ post.title }}</a>
+      <a href="{{ post.url }}">{{ post.date | date: "%Y-%M-%d:  " }} {{ post.title }}</a>
     </li>
   {% endfor %}
 </ul>
+
+<!--
+## Open-source Software
+
+Own projects:
+
+ * [hamsa](https://rajesh-krishnan.github.io/deed): Hash Aided Machine-Intelligence Sans Accelerators
+ * [deed](https://rajesh-krishnan.github.io/deed): Decision Evaluation in Encrypted Domain 
+ * [syncsmart](https://rajesh-krishnan.github.io/syncsmart): Data Set Reconciliation 
+ * [cambda](https://rajesh-krishnan.github.io/cambda): An Implementation of the Kanerva Memory 
+ * [pys](https://rajesh-krishnan.github.io/pys): Patanjala Yogasutrani
+
+Contributions to other projects:
+
+ * [gaps-closure](https://gaps-closure.github.io): Annotation-Driven Program Analysis and Partitioning
+ * [sediment-lfproject](https://sediment-lfproject.github.io): Security for IoT Devices
+ 
+## Influence on Standards
+
+While working on the DARPA XG Program, I wrote the original text for the spectrum policy language portions of this [report](https://apps.dtic.mil/sti/pdfs/ADA437096.pdf), which has a clear, albeit uncredited, influence on the IEEE P1900.5.1 standard. In my retrospective opinion, a better design would accord a constraints DSL more prominence within the language, while including modal and description logics more judiciously.
+
+While working on the DARPA DTN program, I had [participated](https://mailarchive.ietf.org/arch/msg/dtn-interest/KQFRTBWkMga5pRTXuP3tbDzu-n8/) in the IRTF DTNRG.
+-->
