--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-
-<h2>Patents and Publications</h2>
-
-For a list of my patents, publications, and reports, see:
-[Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate)
-
+<html>
 <h2>Blog posts</h2>
+
 <ul>
   {% for post in site.posts %}
     <li>
@@ -12,9 +8,9 @@ For a list of my patents, publications, and reports, see:
     </li>
   {% endfor %}
 </ul>
+</html>
 
 <!--
-## Open-source Software
 
 Own projects:
 
