--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
----
-layout: default
----
+<h2>My Works</h2>
 
-<h2>Blog posts</h2>
+For a list of my patents and technical publications, see <a href="https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate">[Google Scholar]</a>.
+
+A list of blog articles on this site are below:
 
 <ul>
   {% for post in site.posts %}
