--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <h2>My Works</h2>
 
 For a list of my patents and technical publications, see <a href="https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate">[Google Scholar]</a>.
