--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<h2>My Works</h2>
+<h1>My Works</h1>
 
-For a list of my patents and technical publications, see <a href="https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate">[Google Scholar]</a>.
+For a list of my patents and technical publications, see <a href="https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate">[Google Scholar]</a>. <p>
 
 A list of blog articles on this site are below:
 
