--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@ layout: default
 
 <h1>Blog Posts by Category</h1>
 
-<ul>
-  {% for category in site.categories %}
-    <li><a name="{{ category | first }}">{{ category | first }}</a>
-      <ul>
-        {% for post in category.last %}
-          <li><a href="{{ post.url }}">{{ post.date | date: "%Y-%M-%d:  " }} {{ post.title }}</a></li>
-            {% endfor %}
-      </ul>
-    </li>
-  {% endfor %}
-</ul>
+{% for category in site.categories %}
+  <h2>{{ category | first }}</h2>
+    <ul>
+      {% for post in category.last %}
+        <li><a href="{{ post.url }}">{{ post.date | date: "%Y-%M-%d:  " }} {{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </li>
+{% endfor %}
 
