--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@ layout: default
 
 {% for category in site.categories %}
   <h2>{{ category | first }}</h2>
-    <ul>
-      {% for post in category.last %}
-        <li><a href="{{ post.url }}">{{ post.date | date: "%Y-%M-%d:  " }} {{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </li>
+    {% for post in category.last %}
+      <a href="{{ post.url }}">{{ post.date | date: "%B %-d, %Y    " }} {{ post.title }}</a><p>
+    {% endfor %}
 {% endfor %}
 
