date outside link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 {% for category in site.categories %}
   <h2>{{ category | first }}</h2>
     {% for post in category.last %}
-      <a href="{{ post.url }}">{{ post.date | date: "%B %-d, %Y" }} &nbsp;&nbsp;&nbsp;&nbsp; {{ post.title }}</a><p>
+      {{ post.date | date: "%B %-d, %Y" }} &nbsp;&nbsp;&nbsp;&nbsp; <a href="{{ post.url }}">{{ post.title }}</a><p>
     {% endfor %}
 {% endfor %}
 
