--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ layout: default
 <h1>Blog Posts by Category</h1>
 
 {% for category in site.categories %}
-  <h2>{{ category | first }}</h2>
+  <h2> {{ category | first }}</h2>
+  <div id={{ category | first }} style="overflow:scroll; height:50px;">
     {% for post in category.last %}
       {{ post.date | date: "%B %-d, %Y" }} &nbsp;&nbsp;&nbsp;&nbsp; <a href="{{ post.url }}">{{ post.title }}</a><p>
     {% endfor %}
+  </div>
 {% endfor %}
 
