--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
+title: "Blog Posts"
 ---
-
-<h1>Blog Posts by Category</h1>
 
 {% for category in site.categories %}
   <h2> {{ category | first }}</h2>
